# llm-research

./: .gitattributes  README.md
attention-samples/: pyproject.toml
attention_samples/: pyproject.toml
attention_samples/attention_samples/: main.py
attention_samples/attention_samples/simple_self_attention/: non_trainable_weights.py
expenses_data_set/: test.csv  train.csv  validation.csv
gpt/: pyproject.toml
gpt/gpt/: main.py  text_generator.py
gpt/gpt/activations/: gelu.py
gpt/gpt/attention/: multi_head_attention.py  self_attention.py
gpt/gpt/finetuning/: classifier.py  spam_data_set.py
gpt/gpt/instruction/: data_set.py
gpt/gpt/models/: dummy.py  gpt_v2.py
gpt/gpt/multiclassifier/: classifier.py  expenses_data_set.py
gpt/gpt/open_ai/: download_weights.py  pretrained_weights.py
gpt/gpt/tokenizer/: encoder.py
gpt/gpt/transformer/: feed_forward.py  layer_norm.py  transformer.py
gpt_implementation/: pyproject.toml
gpt_implementation/gpt_implementation/: main.py
gpt_implementation/gpt_implementation/activations/: gelu.py
gpt_implementation/gpt_implementation/attention/: self_attention.py
gpt_implementation/gpt_implementation/gpt/: layer_norm.py  model.py  transformer.py
gpt_implementation/gpt_implementation/tokenizer/: encoder.py
model_files/: review_classifier.pth
