[tool.poetry]
name = "gpt-implementation"
version = "0.1.0"
description = ""
authors = ["qcloop <umedzokirov@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
importlib-metadata = "^8.6.1"
numpy = "2.1.0"
tiktoken = "^0.9.0"
black = "^25.1.0"
torch = "2.6.0"
# torch = "2.1.0"
matplotlib = "^3.10.1"
pybind11 = "^2.13.6"
tensorflow = "2.19.0"
tqdm = "^4.67.1"
types-tqdm = "^4.67.0.20250417"
types-tensorflow = "^2.18.0.20250503"
pandas = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
